turtleart.housemany.HouseMany.scala.error
Compilation error:
HouseMany:10: error: not found: value Dohouse
  Dohouse()
  ^HouseMany:14: error: not found: value doLineHouse
  doLineHouse()
  ^