turtleart.housemany.HouseMany.scala.code
override def run() {
  DoLineHouse()
  penUp()
  moveTo(getX()-50,getY()+75)
  penDown()
  DoHouse()
  penUp()
  moveTo(getX()+150,getY())
  penDown()
  Dohouse()
  penUp()
  moveTo(getX(),getY()+75)
  penDown()
  doLineHouse()
  
  
}

def DoLineHouse(){
    for (i <- 1 to 4){
    DoHouse()
    penUp()
    moveTo(getX()+50,getY())
    penDown()
  }
}

def DoHouse(){
  for (i <- 1 to 4){
  forward(30)
  right(90)
  }
  forward(30)
    right(30)
  for (i <- 1 to 3){
    forward(30)
    right(120)
  }
  right(150)
  forward(30)
  right(180)
}